
pa_ppx Version 0.07
-------------------

* [27 Oct 2020] updated to compat with camlp5 8.00~alpha07.  Not
  compatible with previous versions (b/c significant changes to
  Camlp5's AST).

  added `pa_ppx.deriving_plugins.params` providing support for
  demarshaling from OCaml expressions into data-types, hence for
  automating demarshaling of options for PPX rewriters.

pa_ppx Version 0.04
-------------------

* [30 Sep 2020] change pa_ppx.import so that it doesn't automatically
  rename types when importing recursive types.  E.g. in

  type longident = [%import: Longident.t]

  it will not rename instances of "t" in the imported definition to
  "longident".  To recover this behaviour, just change the above to

  type longident = [%import: Longident.t
    [@with t := longident]
  ]

  This allows much greater flexibility in using pa_ppx.import to
  manipulate collections of recursive types.

pa_ppx Version 0.03
-------------------

* [28 Sep 2020] conditionalized opam on "os != macos" until we find
  somebody who can help us test builds on macos.

* [27 Sep 2020] added TRIP-TEST-ALL to generate and save
  generated-files (and run tests) for all supported ocaml versions.

* [24 Sep 2020] new way of selecting generated-src versions.
  hopefully this will make pa_ppx immune to "new camlp5 release, we
  can't build" problems.

  pa_ppx.import now support "mli-only" and "redeclare" options:

  "-pa_import-mli-only": to ensure that only MLI files are consulting during import
  (e.g. to pull in OCaml AST from an older OCaml version, and avoid
  doing so from the stdlib)

  "-pa_import-redeclare": to import types and *not* add the type-equation that
  binds them to the existing type.  For instance, to combine with
  mli-only (since there isn't any existing type that matches).

  cache files as they're read in pa_import, so we don't need to reread them.

  the [%%import ...] item-extension (for str-items and sig-items) now takes a
  [@add ...] attribute, viz.
