@@ -2,6 +2,16 @@
 pa_ppx Version 0.07
 -------------------
 
+* [23 Dec 2020] update pa_ppx.import with better type-rewriting.
+  Now we can write
+
+  [%%import: Stuff.zz
+    [@with [%typ: int * bool] := [%typ: bool * int]]
+  ]
+
+  with the meaning that "int * bool" is rewritten to "bool * int" in
+  the r.h.s. of types imported from Stuff.zz.
+
 * [27 Oct 2020] updated to compat with camlp5 8.00~alpha07.  Not
   compatible with previous versions (b/c significant changes to
   Camlp5's AST).
